RESOLVED FIXED85105
Fullscreen pop-up logic restored to using processingUserGesture. [Regression]
https://bugs.webkit.org/show_bug.cgi?id=85105
Summary Fullscreen pop-up logic restored to using processingUserGesture. [Regression]
Vincent Scheib
Reported 2012-04-27 15:49:09 PDT
Fullscreen pop-up logic restored to using processingUserGesture.
Attachments
Patch (2.53 KB, patch)
2012-04-27 16:00 PDT, Vincent Scheib
no flags
Vincent Scheib
Comment 1 2012-04-27 16:00:14 PDT
Jer Noble
Comment 2 2012-04-27 16:37:56 PDT
Comment on attachment 139297 [details] Patch This change looks good to me. The mismatch between domWindow->allowPopups() and the spec is well documented in this new comment.
Jer Noble
Comment 3 2012-04-27 16:37:57 PDT
Comment on attachment 139297 [details] Patch This change looks good to me. The mismatch between domWindow->allowPopups() and the spec is well documented in this new comment.
WebKit Review Bot
Comment 4 2012-05-01 21:27:32 PDT
Comment on attachment 139297 [details] Patch Clearing flags on attachment: 139297 Committed r115792: <http://trac.webkit.org/changeset/115792>
WebKit Review Bot
Comment 5 2012-05-01 21:27:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.