Source/WebCore/dom/Document.cpp
@@ -5318,8 +5318,11 @@ void Document::requestFullScreenForElement(Element* element, unsigned short flag
         if (descendentHasNonEmptyStack && !inLegacyMozillaMode)
             break;
 
-        // This algorithm is not allowed to show a pop-up.
-        if (!domWindow()->allowPopUp())
+        // This algorithm is not allowed to show a pop-up:
+        //   An algorithm is allowed to show a pop-up if, in the task in which the algorithm is running, either:
+        //   - an activation behavior is currently being processed whose click event was trusted, or
+        //   - the event listener for a trusted click event is being handled.
+        if (!ScriptController::processingUserGesture())
             break;
 
         // There is a previously-established user preference, security risk, or platform limitation.
